Se crea el tamaño de la calculadora

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
      <link rel="stylesheet" href="config.css">
 </head>
 <body>
+
+    <main id="calculadora">
+        <div class="pantalla">123.45</div>
+        <div class="teclado"></div>
+    </main>
     
 </body>
 </html>
